<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".StoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/story_bg"
        android:layout_marginBottom="50dp"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="20dp"
        android:layout_alignParentBottom="true"
        >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:visibility="visible"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:text="@string/text1"
            />
        <ImageView
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/angle_small_down_24"
            app:tint="@color/white" />
        <TextView
            android:id="@+id/info1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/tekan_dimana_saja_untuk_lanjut1"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:text="@string/text2"
            />
        <ImageView
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:src="@drawable/angle_small_down_24"
            app:tint="@color/white" />
        <TextView
            android:id="@+id/info2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:textColor="@color/white"
            android:text="@string/tekan_dimana_saja_untuk_lanjut2"
            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:text="@string/text3"
            />
        <ImageView
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:src="@drawable/angle_small_down_24"
            app:tint="@color/white" />
        <TextView
            android:id="@+id/info3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:visibility="gone"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/tekan_dimana_saja_untuk_lanjut3"
            />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:text="@string/text4"
            />
        <ImageView
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:src="@drawable/angle_small_down_24"
            app:tint="@color/white" />
        <TextView
            android:id="@+id/info4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:visibility="gone"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/tekan_dimana_saja_untuk_mulai"
            />
    </LinearLayout>

</RelativeLayout>