<!-- res/layout/reset_password_dialog.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/rounded_corner_dialog_background"

    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/emailResetET"
        android:fontFamily="serif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:background="@drawable/background_edit_text"
        android:hint="@string/enter_your_email"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:id="@+id/resetPasswordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#008000"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:fontFamily="serif"
            android:textAllCaps="false"
            android:background="@drawable/background_edit_text"
            android:layout_marginEnd="10dp"
            android:text="@string/reset_password"/>
        <Button
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:backgroundTint="#ff0000"
            android:textAllCaps="false"
            android:background="@drawable/background_edit_text"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_marginStart="10dp"
            android:text="@string/back"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="serif"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:text="@string/dengan_mengklik_tombol_hijau_anda_akan_menerima_email_dari_ikhwan_hanif_untuk_mereset_password_anda"
        android:textSize="12sp"
        android:textStyle="italic"
        android:textAlignment="center"
        />



</LinearLayout>
