<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SuccessActivity"
    android:background="@drawable/background">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/refresh"
                android:onClick="restart" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/lanjut"/>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/exit"
                android:onClick="exit" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="Menu"
                android:textColor="@color/black"
                android:textSize="18sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:textAlignment="center"
            android:fontFamily="serif"
            android:text="@string/you_did_it"
            android:textColor="@color/black"
            android:textSize="55sp"
            android:textStyle="bold" />

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/trophy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/your_score"
            android:fontFamily="serif"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Score"
            android:fontFamily="serif"
            android:textColor="@color/white"
            android:textSize="50sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:fontFamily="serif"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/versi_1_0"
        android:textColor="#8F8F8F" />
</RelativeLayout>