<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SignIn"
        android:textSize="50sp"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginEnd="220dp"
        android:layout_below="@id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:hint="email"
                android:textColorHint="#AEAEAE"
                android:textColor="@color/black"
                android:background="@drawable/background_edit_text"
                android:padding="12dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle">

            <EditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="password"
                android:fontFamily="serif"
                android:textColorHint="#AEAEAE"
                android:textColor="@color/black"
                android:background="@drawable/background_edit_text"
                android:padding="12dp" />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/textForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:fontFamily="serif"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"/>
        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:layout_marginTop="10dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:background="@drawable/background_edit_text"
            android:text="Login"

            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:fontFamily="serif"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/don_t_have_an_account"
                />
            <TextView
                android:id="@+id/signUpTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:fontFamily="serif"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="SignUp"
                />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:fontFamily="serif"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/versi_1_0"
        android:textColor="#8F8F8F" />

</RelativeLayout>
